--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -22,7 +22,7 @@
   </div>
   <div class="gravitee-login-content" layout="column">
     <md-input-container class="md-icon-float">
-      <label>Login</label>
+      <label>Username</label>
       <input ng-model="user.username" type="text" ng-required="true" autofocus>
     </md-input-container>
 
