--- a/src/app/platform/dashboard/_dashboard.scss
+++ b/src/app/platform/dashboard/_dashboard.scss
@@ -43,3 +43,15 @@ md-list-item.eventType {
   background-color: #337ab7;
   color: white;
 }
+
+.dashboard-events-header {
+  padding-bottom: 10px; margin: 0px 15px 0 15px; border-bottom: 1px solid #efefef;
+
+  & > span {
+    margin-top: 15px;
+  }
+
+  & > md-list {
+    margin: -10px 0;
+  }
+}
