feat(gateway): Define HTTP / HTTPS or proxy per endpoint instead of g… (#223)
* feat(gateway): Define HTTP / HTTPS or proxy per endpoint instead of globally for an API

Closes gravitee-io/issues#242

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -121,9 +121,25 @@ ng-md-icon {
   }
 }
 
+table {
+  ng-md-icon {
+    position: relative;
+    top: 0px;
+  }
+  code {
+    position: relative;
+    top: -6px;
+  }
+}
+
 .btn-group ng-md-icon {
   position: relative;
   top: 3px;
+}
+
+md-radio-button ng-md-icon {
+  position: relative;
+  top: 2px;
 }
 
 .gravitee-card:hover {
