--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -24,12 +24,12 @@
     <form name="formRegistration" ng-submit="register()" layout="column">
       <md-input-container class="md-icon-float">
         <label>First name</label>
-        <input ng-model="user.firstname" type="text" ng-required="true">
+        <input ng-model="user.firstname" type="text" ng-required="true" autofocus>
       </md-input-container>
 
       <md-input-container class="md-icon-float">
         <label>Last name</label>
-        <input ng-model="user.lastname" type="text" ng-required="true" autofocus>
+        <input ng-model="user.lastname" type="text" ng-required="true">
       </md-input-container>
 
       <md-input-container class="md-icon-float">
