fix(empty-state) : fix Application subscriptions empty state

--- a/src/app/application/details/subscriptions/applicationSubscriptions.html
+++ b/src/app/application/details/subscriptions/applicationSubscriptions.html
@@ -102,7 +102,7 @@
   </div>
 </div>
 
-<gravitee-empty-state ng-if="!subscriptionsCtrl.hasKeysDefined()"
+<gravitee-empty-state ng-if="!applicationSubscriptionsCtrl.hasKeysDefined()"
                       icon="vpn_key"
                       model="Subscription"
                       message="Your Application Subscriptions will appear here"
