fix(portal): Minor css / js issues

--- a/src/app/api/admin/members/addMember.dialog.html
+++ b/src/app/api/admin/members/addMember.dialog.html
@@ -66,12 +66,12 @@
 			</div>
     </md-dialog-content>
 
-    <div class="md-actions" layout="row">
+    <md-dialog-actions layout="row">
       <md-button type="button" ng-click="hide()" class="md-primary">
         Cancel
       </md-button>
       <md-button type="submit" class="md-primary" ng-click="addMembers()">
         Add
       </md-button>
-    </div>
+    </md-dialog-actions>
   </md-dialog>
