--- a/src/app/api/admin/properties/add-property.dialog.html
+++ b/src/app/api/admin/properties/add-property.dialog.html
@@ -42,13 +42,13 @@
     		</md-content>
       </md-dialog-content>
 
-      <div class="md-actions" layout="row">
+      <md-dialog-actions layout="row">
         <md-button type="button" ng-click="dialogAddPropertyCtrl.hide()" class="md-primary">
           Cancel
         </md-button>
         <md-button type="submit" class="md-primary" ng-disabled="formApiProperty.$invalid">
           Save
         </md-button>
-      </div>
+      </md-dialog-actions>
     </form>
   </md-dialog>
