--- a/src/app/api/admin/subscriptions/subscriptions.html
+++ b/src/app/api/admin/subscriptions/subscriptions.html
@@ -29,7 +29,7 @@
   <div layout-padding ui-tree data-empty-placeholder-enabled="false"
        ng-repeat="(application, subscriptions) in subscriptionsCtrl.subscriptionsByApplication">
     <div ui-tree-nodes ng-model="data">
-      <h5>Application <b>{{application}}</b></h5>
+      <h5>[<b> {{application}} </b>]</h5>
       <table md-table>
         <thead md-head>
         <tr md-row>
