--- a/src/app/application/details/subscriptions/applicationSubscriptions.html
+++ b/src/app/application/details/subscriptions/applicationSubscriptions.html
@@ -29,7 +29,7 @@
   <div layout-padding ui-tree data-empty-placeholder-enabled="false"
        ng-repeat="(api, subscriptions) in applicationSubscriptionsCtrl.subscriptionsByApi">
     <div ui-tree-nodes ng-model="data">
-      <h5>Api <a ui-sref="apis.portal.pages.page({ apiId: api } )"><b>{{applicationSubscriptionsCtrl.apiNameById[api]}}</b></a></h5>
+      <h5>[ <a ui-sref="apis.portal.pages.page({ apiId: api } )"><b>{{applicationSubscriptionsCtrl.apiNameById[api]}}</b></a> ]</h5>
       <table md-table>
         <thead md-head>
         <tr md-row>
