fix: Active correctly menu global settings

--- a/src/app/api/admin/general/apiGateway.html
+++ b/src/app/api/admin/general/apiGateway.html
@@ -36,7 +36,7 @@
         <th md-column md-order-by="backup" hide-gt-xs show-gt-sm><span>Backup</span></th>
         <th md-column md-order-by="healthcheck" hide-gt-xs show-gt-sm><span>Health-check</span></th>
         <th md-column>
-          <md-button class="md-icon-button" aria-label="Add endpoint" ui-sref="apis.admin.endpoint({endpointName: endpoint.name})">
+          <md-button class="md-icon-button" aria-label="Add endpoint" ui-sref="apis.admin.general.endpoint({endpointName: endpoint.name})">
             <ng-md-icon icon="add" style="fill: rgba(0, 0, 0, 0.54);"></ng-md-icon>
             <md-tooltip md-direction="left">Add new endpoint</md-tooltip>
           </md-button>
@@ -63,7 +63,7 @@
           <ng-md-icon ng-show="!endpoint.healthcheck" icon="clear" style="fill: #BE2628"></ng-md-icon>
         </td>
         <td md-cell>
-          <md-button class="md-icon-button" aria-label="Edit endpoint" ui-sref="apis.admin.endpoint({endpointName: endpoint.name})">
+          <md-button class="md-icon-button" aria-label="Edit endpoint" ui-sref="apis.admin.general.endpoint({endpointName: endpoint.name})">
             <ng-md-icon icon="settings" style="fill: rgba(0, 0, 0, 0.54);"></ng-md-icon>
             <md-tooltip md-direction="left">Edit endpoint</md-tooltip>
           </md-button>
