fix(group): fix edit group dialog title

--- a/src/app/configuration/admin/groups/dialog/add-group.dialog.html
+++ b/src/app/configuration/admin/groups/dialog/add-group.dialog.html
@@ -19,7 +19,7 @@
     <form name="formGroup" ng-submit="dialogAddGroupCtrl.save()" novalidate>
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>New group</h2>
+                <h2>{{action}} group</h2>
                 <span flex></span>
                 <md-button type="button" class="md-icon-button" ng-click="dialogAddGroupCtrl.hide()">
                     X
