--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -96,7 +96,7 @@
                       icon="dashboard"
                       model="API"
                       message="Hmmm, there is no API for you here :("
-                      sub-message="Start creating an API"
+                      sub-message="{{!graviteeUser ? 'Login to get access to more APIs' : 'Start creating an API'}}"
                       create-mode="apisCtrl.createMode"></gravitee-empty-state>
 
 <div ng-if="!isLoading && apisCtrl.apis.length == 0" style="text-align: center;">
