refactor: Better display of user name + minor fixes

--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -16,7 +16,7 @@
 
 -->
 <form name="formApi" ng-submit="generalCtrl.update(generalCtrl.api)" novalidate>
-  <div layout="column" layout-wrap layout-gt-sm="row">
+  <div layout="column" layout-gt-sm="row">
     <md-input-container flex="30">
       <label>Name</label>
       <input ng-model="generalCtrl.api.name" type="text" required>
