--- a/src/app/api/admin/members/members.html
+++ b/src/app/api/admin/members/members.html
@@ -43,7 +43,7 @@
     <div layout="column">
       <h4>Members
         <md-button class="md-icon-button" aria-label="Members Info" ng-click="apiMembersCtrl.showPermissionsInformation()">
-          <ng-md-icon icon="info" style="fill: #b1bdc5;"></ng-md-icon>
+          <ng-md-icon icon="info" style="fill: #b1bdc5; top: 0;"></ng-md-icon>
         </md-button>
       </h4>
       <span flex></span>
