refactor: Added a margin on the user image

--- a/src/app/components/sidenav/_sidenav.scss
+++ b/src/app/components/sidenav/_sidenav.scss
@@ -19,14 +19,12 @@
     font-weight: 500;
     color: #FFF;
     border-radius: 5px;
+    margin-left: 5px;
   }
 
   .logo-text {
     color: #FFF;
     font-size: 14px;
-  }
-
-  .reduce-mode {
     margin-left: 5px;
   }
 }
