fix(create-api): typo

--- a/src/app/api/admin/creation/newApi.html
+++ b/src/app/api/admin/creation/newApi.html
@@ -44,7 +44,7 @@
         </md-tab>
         <md-tab label="Import from link" ng-click="newApiCtrl.importFileMode= false; newApiCtrl.importURLMode= true;">
           <div class="input-group import-file-from-url">
-            <input class="form-control" ng-model="newApiCtrl.apiDescriptorURL" required type="url" placeholder="Enter API descriptor URL (only Swagger descriptor)"/>
+            <input class="form-control" ng-model="newApiCtrl.apiDescriptorURL" required type="url" placeholder="Enter Swagger descriptor URL"/>
           </div>
         </md-tab>
       </md-tabs>
