--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<form name="formApi" ng-submit="generalCtrl.update(generalCtrl.api)" novalidate>
+<form name="generalCtrl.formApi" ng-submit="generalCtrl.update(generalCtrl.api)" novalidate>
   <div layout="column" layout-gt-sm="row">
     <md-input-container flex="30">
       <label>Name</label>
@@ -84,10 +84,10 @@
   </div>
 
   <div class="md-actions gravitee-api-save-button" layout="row">
-    <md-button class="md-raised" type="submit" ng-disabled="formApi.$invalid || formApi.$pristine">
+    <md-button class="md-raised" type="submit" ng-disabled="generalCtrl.formApi.$invalid || generalCtrl.formApi.$pristine">
       Save
     </md-button>
-    <md-button class="md-raised md-primary" type="button" ng-click="generalCtrl.reset()" ng-disabled="formApi.$invalid || formApi.$pristine">
+    <md-button class="md-raised md-primary" type="button" ng-click="generalCtrl.reset()" ng-disabled="generalCtrl.formApi.$invalid || generalCtrl.formApi.$pristine">
       Reset
     </md-button>
     <md-button class="md-raised md-warn pull-right" type="button" ng-click="generalCtrl.delete(generalCtrl.api.id)"
