fix(sidenav): set correct background color

--- a/src/app/api/admin/healthcheck/_healthcheck.scss
+++ b/src/app/api/admin/healthcheck/_healthcheck.scss
@@ -9,5 +9,8 @@ $healthcheckSidenavWidth: 500px;
 
 md-sidenav.healthcheck {
   @include min-max-width($healthcheckSidenavWidth);
-  background-color: $fontColor;
+  background-color: #fafafa;
+  md-content {
+    background-color: #fafafa;
+  }
 }
