Hide complementary description on raml

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,7 @@
 
 @import 'platform/dashboard/_dashboard.scss';
 
+@import 'components/documentation/page.scss';
 
 $backgroundColor: rgb(45,50,62);
 
