--- a/src/portal/components/navbar/navbar.html
+++ b/src/portal/components/navbar/navbar.html
@@ -28,7 +28,8 @@
   <md-menu ng-if="$ctrl.graviteeUser.username" md-offset="0 54">
     <md-button class="gv-navbar-user-link" ng-click="$mdMenu.open($event)" aria-label="Open user menu">
       <img ng-src="{{$ctrl.graviteeUser.picture || $ctrl.getLogo()}}" alt="user-picture"/>
-      <span>{{$ctrl.graviteeUser.firstname}} {{$ctrl.graviteeUser.lastname}}</span>
+      <span ng-if="$ctrl.graviteeUser.lastname">{{$ctrl.graviteeUser.firstname}} {{$ctrl.graviteeUser.lastname}}</span>
+      <span ng-if="!$ctrl.graviteeUser.lastname">{{$ctrl.graviteeUser.username}}</span>
     </md-button>
     <md-menu-content class="gv-menu-content" width="6">
       <div layout="row" class="gv-menu-content-main">
