fix(mail): Typo error in email

--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/apiKeyRevoked.html
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/apiKeyRevoked.html
@@ -11,8 +11,8 @@
 			</#if>
 			<p>
 				Your API Key <b><code>${apiKey}</code></b> used by subscription to plan <b>${plan.name}</b> for API
-				<b>${api.name}</b> and application <b>${application.name}</b> has been revoked can not be used anymore
-				to consume API.
+				<b>${api.name}</b> and application <b>${application.name}</b> has been revoked and can not be used
+				anymore to consume API.
 			</p>
 		</div>
 	</body>
