--- a/src/portal/components/navbar/navbar.html
+++ b/src/portal/components/navbar/navbar.html
@@ -30,7 +30,11 @@
              ng-if="$ctrl.displayContextualDocumentationButton">
     <ng-md-icon icon="live_help" gv-theme-element="portal.navbar.help"></ng-md-icon>
   </md-button>
-  <md-button ng-if="!$ctrl.graviteeUser.username" ui-sref-active="menu-active" ui-sref="login">{{'menu.login' | translate}}</md-button>
+  <md-button ng-if="!$ctrl.graviteeUser.username && !$ctrl.isOnlyOAuth" ui-sref-active="menu-active" ui-sref="login">{{'menu.login' | translate}}</md-button>
+  <md-button ng-if="!$ctrl.graviteeUser.username && $ctrl.isOnlyOAuth" ui-sref-active="menu-active" style="background-color: {{provider.color}}; color: #fff;" data-ng-repeat="provider in $ctrl.providers" ng-click="$ctrl.authenticate(provider.id)">
+    <ng-md-icon icon="{{provider.icon}}" size="20" style="fill: white;margin-right: 5px"></ng-md-icon>{{'menu.login' | translate}}
+  </md-button>
+
   <md-menu ng-if="$ctrl.graviteeUser.username" md-offset="0 54">
     <md-button class="gv-navbar-user-link" ng-click="$mdMenu.open($event)" ng-mouseover="$mdMenu.open($event)" aria-label="Open user menu">
       <img ng-if="!$ctrl.hasAlert()" ng-src="{{$ctrl.getUserPicture()}}"
