--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/subscriptionApproved.html
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/subscriptionApproved.html
@@ -8,7 +8,8 @@
 			<p>Your subscription to the API <b>${api.name}</b> with plan <b>${plan.name}</b> has been approved.</p>
 
 			<#if subscription.reason??>
-			<p>${subscription.reason}</p>
+			Message
+			<p style="border: 1px solid grey; margin: 0 32px; padding: 16px; font-style: italic;">${subscription.reason}</p>
 		</#if>
 		</div>
 	</body>
