--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/subscriptionReceived.html
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/subscriptionReceived.html
@@ -11,7 +11,8 @@
 			</#if>
 
 			<#if subscription.request??>
-				<p>${subscription.request}</p>
+				Message
+				<p style="border: 1px solid grey; margin: 0 32px; padding: 16px; font-style: italic;">${subscription.request}</p>
 			</#if>
       	</div>
 	</body>
