--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/subscriptionRejected.html
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/subscriptionRejected.html
@@ -8,7 +8,8 @@
 			<p>Your subscription to the API <code>${api.name}</code> with plan <code>${plan.name}</code> has been rejected.</p>
 
 			<#if subscription.reason??>
-			<p>${subscription.reason}</p>
+            Message
+			<p style="border: 1px solid grey; margin: 0 32px; padding: 16px; font-style: italic;">${subscription.reason}</p>
 			</#if>
 		</div>
 	</body>
