feat(console): when Pendo is enable do not open contextual doc

--- a/gravitee-apim-console-webui/src/components/navbar/_navbar.scss
+++ b/gravitee-apim-console-webui/src/components/navbar/_navbar.scss
@@ -16,6 +16,11 @@ md-toolbar.topnavbar {
   }
 }
 
+.topnavbar-contextual-doc {
+  // Allow Pendo to add a badge
+  overflow: initial;
+}
+
 .gv-navbar-link:hover,
 .gv-navbar-link:focus {
   color: inherit;
