--- a/gravitee-apim-console-webui/src/components/navbar/navbar.html
+++ b/gravitee-apim-console-webui/src/components/navbar/navbar.html
@@ -24,10 +24,11 @@
   </div>
   <span flex></span>
   <md-button
-    class="gv-navbar-button"
+    class="gv-navbar-button topnavbar-contextual-doc"
     ng-click="$ctrl.openContextualDocumentation();"
     aria-label="Display contextual documentation"
     ng-if="$ctrl.displayContextualDocumentationButton"
+    data-pendoId="sidenav-resource-center"
   >
     <ng-md-icon icon="live_help" gv-theme-element="portal.navbar.help"></ng-md-icon>
   </md-button>
