--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -27,3 +27,33 @@
       <mat-icon>add</mat-icon> Add Api
     </button>
 </div>
+
+
+<gio-table-wrapper [length]="apisTableDSUnpaginatedLength" [filters]="filters">
+  <table
+    mat-table
+    matSort
+    [dataSource]="apisTableDS"
+    id="apisTable"
+    aria-label="Apis table"
+  >
+    <!-- Display name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
+      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)">
+        <a>{{ element.name }}</a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <!-- Row shown when there is no data -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+        {{ 'There is no apis (yet).' }}
+      </td>
+    </tr>
+  </table>
+</gio-table-wrapper>
+
