--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -30,11 +30,43 @@
 
 <gio-table-wrapper [length]="apisTableDSUnpaginatedLength" [filters]="filters" (filtersChange)="onFiltersChanged($event)">
   <table mat-table matSort [dataSource]="apisTableDS" id="apisTable" aria-label="Apis table">
-    <!-- Display name Column -->
+    <!-- Picture Column -->
+    <ng-container matColumnDef="picture">
+      <th mat-header-cell *matHeaderCellDef id="picture"></th>
+      <td mat-cell *matCellDef="let element">
+        <gio-avatar [src]="element.picture" [name]="element.name" size="32" [roundedBorder]="true"></gio-avatar>
+      </td>
+    </ng-container>
+
+    <!-- Display Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
       <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)">
         <a>{{ element.name }}</a>
+      </td>
+    </ng-container>
+
+    <!-- Display Context Path Column -->
+    <ng-container matColumnDef="contextPath">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header id="contextPath">Context paths</th>
+      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)">
+        <a>{{ element.contextPath }}</a>
+      </td>
+    </ng-container>
+
+    <!-- Display Tags Column -->
+    <ng-container matColumnDef="tags">
+      <th mat-header-cell *matHeaderCellDef id="tags">Tags</th>
+      <td mat-cell *matCellDef="let element">
+        <a>{{ element.tags }}</a>
+      </td>
+    </ng-container>
+
+    <!-- Display Owner Column -->
+    <ng-container matColumnDef="owner">
+      <th mat-header-cell *matHeaderCellDef id="owner">Owner</th>
+      <td mat-cell *matCellDef="let element">
+        <a [matTooltip]="element.ownerEmail ?? null">{{ element.owner }}</a>
       </td>
     </ng-container>
 
