--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -46,6 +46,24 @@
       </td>
     </ng-container>
 
+    <!-- Display States Column -->
+    <ng-container matColumnDef="states">
+      <th mat-header-cell *matHeaderCellDef id="states"></th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon *ngIf="element.state === 'STARTED'" matTooltip="Started" class="states__api-started" size="20">play_circle</mat-icon>
+        <mat-icon *ngIf="element.state !== 'STARTED'" matTooltip="Stopped" class="states__api-not-started" size="20">stop_circle</mat-icon>
+        <mat-icon *ngIf="element.lifecycleState === 'PUBLISHED'" matTooltip="Published" class="states__api-published" size="20">cloud_done</mat-icon>
+        <mat-icon *ngIf="element.lifecycleState !== 'PUBLISHED'" matTooltip="Unpublished" class="states__api-not-published" size="20">cloud_off</mat-icon>
+        <span
+          *ngIf="element.workflowBadge"
+          [ngClass]="element.workflowBadge.class"
+          class="states__api-workflow-badge"
+        >
+          {{element.workflowBadge.text}}
+        </span>
+      </td>
+    </ng-container>
+
     <!-- Display Context Path Column -->
     <ng-container matColumnDef="contextPath">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="contextPath">Context paths</th>
