--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
@@ -55,5 +55,9 @@
     &__api-workflow-badge {
       vertical-align: top;
     }
+
+    &__api-is-not-synced {
+      color: mat.get-color-from-palette(gio.$mat-warning-palette, 'default');
+    }
   }
 }
