--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -52,15 +52,17 @@
       <td mat-cell *matCellDef="let element">
         <mat-icon *ngIf="element.state === 'STARTED'" matTooltip="Started" class="states__api-started" size="20">play_circle</mat-icon>
         <mat-icon *ngIf="element.state !== 'STARTED'" matTooltip="Stopped" class="states__api-not-started" size="20">stop_circle</mat-icon>
-        <mat-icon *ngIf="!(element.isSynced$ | async)" matTooltip="API out of sync" class="states__api-is-not-synced" size="20">sync_problem</mat-icon>
-        <mat-icon *ngIf="element.lifecycleState === 'PUBLISHED'" matTooltip="Published" class="states__api-published" size="20">cloud_done</mat-icon>
-        <mat-icon *ngIf="element.lifecycleState !== 'PUBLISHED'" matTooltip="Unpublished" class="states__api-not-published" size="20">cloud_off</mat-icon>
-        <span
-          *ngIf="element.workflowBadge"
-          [ngClass]="element.workflowBadge.class"
-          class="states__api-workflow-badge"
+        <mat-icon *ngIf="!(element.isSynced$ | async)" matTooltip="API out of sync" class="states__api-is-not-synced" size="20"
+          >sync_problem</mat-icon
         >
-          {{element.workflowBadge.text}}
+        <mat-icon *ngIf="element.lifecycleState === 'PUBLISHED'" matTooltip="Published" class="states__api-published" size="20"
+          >cloud_done</mat-icon
+        >
+        <mat-icon *ngIf="element.lifecycleState !== 'PUBLISHED'" matTooltip="Unpublished" class="states__api-not-published" size="20"
+          >cloud_off</mat-icon
+        >
+        <span *ngIf="element.workflowBadge" [ngClass]="element.workflowBadge.class" class="states__api-workflow-badge">
+          {{ element.workflowBadge.text }}
         </span>
       </td>
     </ng-container>
@@ -85,10 +87,8 @@
     <ng-container matColumnDef="qualityScore" *ngIf="isQualityDisplayed">
       <th mat-header-cell *matHeaderCellDef id="qualityScore">Quality</th>
       <td mat-cell *matCellDef="let element">
-        <span *ngIf="element.qualityScore$ | async as qualityScore"
-              class="quality-score"
-              [ngClass]="qualityScore.class">
-          {{qualityScore.score}}%
+        <span *ngIf="element.qualityScore$ | async as qualityScore" class="quality-score" [ngClass]="qualityScore.class">
+          {{ qualityScore.score }}%
         </span>
       </td>
     </ng-container>
@@ -98,6 +98,14 @@
       <th mat-header-cell *matHeaderCellDef id="owner">Owner</th>
       <td mat-cell *matCellDef="let element">
         <a [matTooltip]="element.ownerEmail ?? null">{{ element.owner }}</a>
+      </td>
+    </ng-container>
+
+    <!-- Display Visibility Column -->
+    <ng-container matColumnDef="visibility">
+      <th mat-header-cell *matHeaderCellDef id="visibility">Visibility</th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon class="visibility" size="20" [matTooltip]="element.visibility.label | titlecase">{{ element.visibility.icon }}</mat-icon>
       </td>
     </ng-container>
 
