--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
@@ -87,3 +87,12 @@
     border-color: mat.get-color-from-palette(gio.$mat-warning-palette, 'default');
   }
 }
+
+.mat-column-visibility {
+  width: 1%;
+  padding: 0 4px;
+
+  .visibility {
+    color: mat.get-color-from-palette(gio.$mat-content-palette, 'default');
+  }
+}
