--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -57,7 +57,7 @@
       <td mat-cell *matCellDef="let element">
         <mat-icon *ngIf="element.state === 'STARTED'" matTooltip="Started" class="states__api-started" size="20">play_circle</mat-icon>
         <mat-icon *ngIf="element.state !== 'STARTED'" matTooltip="Stopped" class="states__api-not-started" size="20">stop_circle</mat-icon>
-        <mat-icon *ngIf="(element.isNotSynced$ | async)" matTooltip="API out of sync" class="states__api-is-not-synced" size="20"
+        <mat-icon *ngIf="element.isNotSynced$ | async" matTooltip="API out of sync" class="states__api-is-not-synced" size="20"
           >sync_problem</mat-icon
         >
         <mat-icon *ngIf="element.lifecycleState === 'PUBLISHED'" matTooltip="Published" class="states__api-published" size="20"
@@ -131,8 +131,11 @@
 
     <!-- Row shown when there is no data -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+      <td *ngIf="!isLoadingData && apisTableDS.length === 0" class="mat-cell" [attr.colspan]="displayedColumns.length">
         {{ 'There is no apis (yet).' }}
+      </td>
+      <td *ngIf="isLoadingData" class="mat-cell" [attr.colspan]="displayedColumns.length">
+        {{ 'Loading...' }}
       </td>
     </tr>
   </table>
