--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.scss
@@ -57,6 +57,10 @@
       vertical-align: top;
     }
 
+    &__api-origin {
+      color: #326de6;
+    }
+
     &__api-is-not-synced {
       color: mat.get-color-from-palette(gio.$mat-warning-palette, 'default');
     }
