--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/api-proxy-entrypoints.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/api-proxy-entrypoints.component.html
@@ -15,4 +15,37 @@
     limitations under the License.
 
 -->
-🚧
+<div class="title">
+  <h1>Entrypoints</h1>
+  <button
+    (click)="switchVirtualHostMode()"
+    mat-raised-button
+    color="primary"
+    aria-label="add-api"
+    *gioPermission="{ anyOf: ['api-definition-u'] }"
+  >
+    {{ virtualHostModeEnabled ? 'Switch to context-path mode' : 'Switch to virtual-hosts mode' }}
+  </button>
+</div>
+
+<form *ngIf="entrypointsForm" [formGroup]="entrypointsForm" (ngSubmit)="onSubmit()" autocomplete="off" gioFormFocusInvalid>
+<mat-card class="form-card">
+    <mat-form-field appearance="fill" class="form-card__context-path-field">
+      <mat-label>Gateway context-path</mat-label>
+      <input matInput formControlName="contextPath" />
+      <mat-hint
+        >Path where API is exposed, must start with a '/' and must contain any letter, capitalize letter, number, dash or
+        underscore.</mat-hint
+      >
+      <mat-error *ngIf="entrypointsForm.get('contextPath').hasError('required')">Context path is required.</mat-error>
+      <mat-error *ngIf="entrypointsForm.get('contextPath').hasError('minlength')"
+        >Context path has to be more than 3 characters long.</mat-error
+      >
+      <mat-error *ngIf="entrypointsForm.get('contextPath').hasError('pattern')"
+        >Context path is not valid (must start with a '/' and must contain any letter, capitalize letter, number, dash or underscore).</mat-error
+      >
+    </mat-form-field>
+</mat-card>
+
+<gio-save-bar [form]="entrypointsForm" [formInitialValues]="initialEntrypointsFormValue"> </gio-save-bar>
+</form>
