--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/api-proxy-entrypoints.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/api-proxy-entrypoints.component.scss
@@ -2,7 +2,25 @@
 
 :host {
   @include gio-layout.gio-responsive-content-container;
+  overflow: visible;
 }
 
-.api-proxy-entrypoints {
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+
+  h1 {
+    margin-bottom: 0;
+  }
+}
+
+
+.form-card {
+  &__context-path-field {
+    width: 100%;
+    padding-bottom: 32px;
+  }
 }
