feat(console): impl virtual-host table - only display and edit existing hosts

--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/api-proxy-entrypoints.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/api-proxy-entrypoints.component.html
@@ -38,6 +38,7 @@
   <api-proxy-entrypoints-virtual-host
     *ngIf="virtualHostModeEnabled"
     [apiProxy]="apiProxy"
+    [domainRestrictions]="domainRestrictions"
     (apiProxySubmit)="onSubmit($event)"
   ></api-proxy-entrypoints-virtual-host>
 </ng-container>
