--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
@@ -16,8 +16,73 @@
 
 -->
 
-<form *ngIf="entrypointsForm" [formGroup]="entrypointsForm" (ngSubmit)="onSubmit()" autocomplete="off" gioFormFocusInvalid>
-  <mat-card> TODO </mat-card>
+<form *ngIf="virtualHostsFormArray" [formGroup]="virtualHostsFormArray" (ngSubmit)="onSubmit()" autocomplete="off" gioFormFocusInvalid>
+  <mat-card>
+    <table
+      mat-table
+      [dataSource]="virtualHostsFormArray.controls"
+      class="virtual-host__table"
+      id="virtualHostsTable"
+      aria-label="Virtual hosts table"
+    >
+      <!-- Host Column -->
+      <ng-container matColumnDef="host">
+        <th mat-header-cell *matHeaderCellDef id="host" width="25%">Host</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-form-field appearance="fill" class="virtual-host__table__host-field">
+            <mat-label>Listening host</mat-label>
+            <input matInput [formControl]="element.controls.host" />
+            <mat-hint>Host which must be set into the HTTP request to access this entrypoint.</mat-hint>
+            <mat-error *ngIf="element.controls.path.hasError('required')">Listening host is required.</mat-error>
+            <mat-error *ngIf="element.controls.path.hasError('pattern')">Listening host is not valid.</mat-error>
+          </mat-form-field>
+        </td>
+      </ng-container>
+      <!-- Path Column -->
+      <ng-container matColumnDef="path">
+        <th mat-header-cell *matHeaderCellDef id="path" width="25%">Path</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-form-field appearance="fill" class="virtual-host__table__path-field">
+            <mat-label>Listening Path</mat-label>
+            <input matInput [formControl]="element.controls.path" />
+            <mat-hint
+              >Path where API is exposed, must start with a '/' and must contain any letter, capitalize letter, number, dash or
+              underscore.</mat-hint
+            >
+            <mat-error *ngIf="element.controls.path.hasError('required')">Listening path is required.</mat-error>
+            <mat-error *ngIf="element.controls.path.hasError('pattern')"
+              >Listening path is not valid (must start with a '/' and must contain any letter, capitalize letter, number, dash or
+              underscore).</mat-error
+            >
+          </mat-form-field>
+        </td>
+      </ng-container>
+      <!-- Override Column -->
+      <ng-container matColumnDef="override_entrypoint">
+        <th mat-header-cell *matHeaderCellDef id="override_entrypoint" width="25%">Override</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-checkbox [formControl]="element.controls.override_entrypoint" aria-label="Override entrypoint"
+            >Override entrypoint
+          </mat-checkbox>
 
-  <gio-save-bar [form]="entrypointsForm" [formInitialValues]="initialEntrypointsFormValue"> </gio-save-bar>
+          <div class="mat-small">Useful to override entrypoint with the virtual host on the portal.</div>
+        </td>
+      </ng-container>
+      <!-- Remove Column -->
+      <ng-container matColumnDef="remove">
+        <th mat-header-cell *matHeaderCellDef id="remove" width="1%"></th>
+        <td mat-cell *matCellDef="let element">X</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="virtualHostsTableDisplayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: virtualHostsTableDisplayedColumns"></tr>
+
+      <!-- Row shown when there is no data -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" [attr.colspan]="virtualHostsTableDisplayedColumns.length">No audit</td>
+      </tr>
+    </table>
+  </mat-card>
+
+  <gio-save-bar [form]="virtualHostsFormArray" [formInitialValues]="initialVirtualHostsFormValue"> </gio-save-bar>
 </form>
