fix(console): rest all FromGroup on discard changes

--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
@@ -114,5 +114,5 @@
     </table>
   </mat-card>
 
-  <gio-save-bar [form]="virtualHostsFormArray" [formInitialValues]="initialVirtualHostsFormValue" (submitted)="onSubmit()"></gio-save-bar>
+  <gio-save-bar [form]="virtualHostsFormArray" (submitted)="onSubmit()" (resetClicked)="onResetClicked()"></gio-save-bar>
 </form>
