--- a/gravitee-apim-console-webui/src/management/api/proxy/cors/api-proxy-cors.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/cors/api-proxy-cors.component.scss
@@ -1,5 +1,42 @@
+@use 'sass:map';
+@use 'node_modules/@angular/material' as mat;
+@use '@gravitee/ui-particles-angular' as gio;
+
 @use '../../../../scss/gio-layout' as gio-layout;
 
 :host {
   @include gio-layout.gio-responsive-content-container;
+}
+
+$typography: map.get(gio.$mat-theme, typography);
+$foreground: map.get(gio.$mat-theme, foreground);
+
+.cors-card {
+  &__enable-toggle {
+    padding-bottom: 16px;
+    width: 100%;
+  }
+
+  &__allow-origin,
+  &__allow-methods {
+    margin-top: 16px;
+
+    &__label,
+    &__hint {
+      padding: 0 0.75em 0 0.75em;
+    }
+
+    &__label {
+      @include mat.typography-level($typography, body-2);
+    }
+
+    &__form-field {
+      width: 100%;
+      padding-bottom: 16px;
+    }
+
+    &.disabled {
+      color: mat.get-color-from-palette($foreground, disabled);
+    }
+  }
 }
