feat(console): impl full cors form

--- a/gravitee-apim-console-webui/src/management/api/proxy/cors/api-proxy-cors.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/cors/api-proxy-cors.component.html
@@ -20,6 +20,7 @@
 <form *ngIf="corsForm" [formGroup]="corsForm" autocomplete="off" gioFormFocusInvalid>
   <mat-card>
     <mat-card-content>
+      <!-- Enable Cors -->
       <gio-form-slide-toggle appearance="fill" class="cors-card__enable-toggle">
         <gio-form-label>Enable Cors</gio-form-label>
         CORS is a mechanism that allows restricted resources (e.g. fonts) on a web page to be requested from another domain outside the
@@ -35,6 +36,7 @@
 
       <mat-divider></mat-divider>
 
+      <!-- Allow Origin -->
       <div class="cors-card__allow-origin" [class.disabled]="!corsForm.get('enabled').value">
         <div class="cors-card__allow-origin__label">Access-Control-Allow-Origin</div>
         <p class="cors-card__allow-origin__hint">
@@ -52,12 +54,13 @@
           </gio-form-tags-input>
 
           <mat-error *ngIf="corsForm.get('allowOrigin')?.errors?.allowOrigin">{{
-            formSettings.get('allowOrigin')?.errors?.allowOrigin
+            corsForm.get('allowOrigin')?.errors?.allowOrigin
           }}</mat-error>
           <mat-hint>Regular Expressions are also supported</mat-hint>
         </mat-form-field>
       </div>
 
+      <!-- Allow Methods -->
       <div class="cors-card__allow-methods" [class.disabled]="!corsForm.get('enabled').value">
         <div class="cors-card__allow-methods__label">Access-Control-Allow-Methods</div>
         <p class="cors-card__allow-methods__hint">
@@ -69,6 +72,81 @@
             <mat-option *ngFor="let method of httpMethods" [value]="method">{{ method }}</mat-option>
           </mat-select>
         </mat-form-field>
+      </div>
+
+      <!-- Allow Headers -->
+      <div class="cors-card__allow-headers" [class.disabled]="!corsForm.get('enabled').value">
+        <div class="cors-card__allow-headers__label">Access-Control-Allow-Headers</div>
+        <p>Used in response to a preflight request to indicate which HTTP headers can be used when making the actual request.</p>
+        <mat-form-field class="cors-card__allow-headers__form-field" appearance="fill">
+          <mat-label>Allow-Headers</mat-label>
+          <gio-form-tags-input
+            aria-label="Allow-Headers selection"
+            formControlName="allowHeaders"
+            placeholder="Content-Type, ..."
+            [addOnBlur]="false"
+            [autocompleteOptions]="defaultHttpHeaders"
+          >
+          </gio-form-tags-input>
+        </mat-form-field>
+      </div>
+
+      <!-- Allow Credentials -->
+      <div class="cors-card__allow-credentials" [class.disabled]="!corsForm.get('enabled').value">
+        <gio-form-slide-toggle appearance="fill" class="cors-card__allow-credentials__enable-toggle">
+          <gio-form-label>Access-Control-Allow-Credentials</gio-form-label>
+          Indicates whether or not the response to the request can be exposed when the credentials flag is true.
+          <mat-slide-toggle
+            gioFormSlideToggle
+            formControlName="allowCredentials"
+            aria-label="CORS allow credentials toggle"
+            name="allowCredentials"
+          ></mat-slide-toggle>
+        </gio-form-slide-toggle>
+      </div>
+
+      <!-- Max Age -->
+      <div class="cors-card__max-age" [class.disabled]="!corsForm.get('enabled').value">
+        <div class="cors-card__max-age__label">Max Age</div>
+        <p class="cors-card__max-age__hint">
+          This header indicates how long the results of a preflight request can be cached (-1 if disabled).
+        </p>
+        <mat-form-field class="cors-card__max-age__form-field" appearance="fill">
+          <mat-label>Max Age</mat-label>
+          <input matInput formControlName="maxAge" type="number" min="-1" />
+          <mat-hint>(seconds)</mat-hint>
+        </mat-form-field>
+      </div>
+
+      <!-- Expose-Headers -->
+      <div class="cors-card__expose-headers" [class.disabled]="!corsForm.get('enabled').value">
+        <div class="cors-card__expose-headers__label">Access-Control-Expose-Headers</div>
+        <p class="cors-card__expose-headers__hint">This header lets a server whitelist headers that browsers are allowed to access.</p>
+        <mat-form-field class="cors-card__expose-headers__form-field" appearance="fill">
+          <mat-label>Expose-Headers</mat-label>
+          <gio-form-tags-input
+            aria-label="Expose-Headers selection"
+            formControlName="exposeHeaders"
+            placeholder="Cache-Control, Content-Length, Content-Type, ..."
+            [addOnBlur]="false"
+            [autocompleteOptions]="defaultHttpHeaders"
+          >
+          </gio-form-tags-input>
+        </mat-form-field>
+      </div>
+
+      <!-- Run policies -->
+      <div class="cors-card__run-policies" [class.disabled]="!corsForm.get('enabled').value">
+        <gio-form-slide-toggle appearance="fill" class="cors-card__run-policies__enable-toggle">
+          <gio-form-label>Run policies for preflight requests</gio-form-label>
+          By default, preflight-requests are ending when processed by the gateway without running API policies.
+          <mat-slide-toggle
+            gioFormSlideToggle
+            formControlName="runPolicies"
+            aria-label="Run policies for preflight requests toggle"
+            name="runPolicies"
+          ></mat-slide-toggle>
+        </gio-form-slide-toggle>
       </div>
     </mat-card-content>
   </mat-card>
