feat: turn API wording to uppercase in API list add button

--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -24,7 +24,7 @@
     aria-label="add-api"
     *gioPermission="{ anyOf: ['environment-api-c'] }"
   >
-    <mat-icon>add</mat-icon> Add Api
+    <mat-icon>add</mat-icon> Add API
   </button>
 </div>
 
