--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/api-proxy-response-templates.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/api-proxy-response-templates.component.html
@@ -15,4 +15,101 @@
     limitations under the License.
 
 -->
-🚧
+<h1>Response Templates</h1>
+
+<mat-card>
+  <div class="response-template__header">
+    <span>Define your own response templates if you're looking for overriding default responses from the gateway.</span>
+
+    <ng-container *ngIf="!isReadOnly">
+      <button
+        *gioPermission="{ anyOf: ['api-response_templates-c'] }"
+        mat-raised-button
+        type="button"
+        (click)="onAddResponseTemplateClicked()"
+        color="primary"
+      >
+        <mat-icon svgIcon="gio:plus"></mat-icon> Add new Response Template
+      </button>
+    </ng-container>
+  </div>
+
+  <table
+    mat-table
+    [dataSource]="responseTemplateTableData"
+    class="response-template__table"
+    id="responseTemplateTable"
+    aria-label="Response Template table"
+  >
+    <!-- Key Column -->
+    <ng-container matColumnDef="key">
+      <th mat-header-cell *matHeaderCellDef id="key" width="25%">Key</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.key }}
+      </td>
+    </ng-container>
+    <!-- Content-Type Column -->
+    <ng-container matColumnDef="contentType">
+      <th mat-header-cell *matHeaderCellDef id="contentType" width="25%">Content-Type</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.contentType }}
+      </td>
+    </ng-container>
+    <!-- Status Code Column -->
+    <ng-container matColumnDef="statusCode">
+      <th mat-header-cell *matHeaderCellDef id="key" width="25%">Status Code</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.statusCode }}
+      </td>
+    </ng-container>
+    <!-- Body Column -->
+    <ng-container matColumnDef="body">
+      <th mat-header-cell *matHeaderCellDef id="key" width="25%">Body (preview)</th>
+      <td mat-cell *matCellDef="let element">
+        <div class="response-template__table__body">
+          {{ element.body }}
+        </div>
+      </td>
+    </ng-container>
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef id="actions" width="1%"></th>
+      <td mat-cell *matCellDef="let element">
+        <div class="response-template__table__actions">
+          <button
+            *ngIf="isReadOnly"
+            (click)="onEditResponseTemplateClicked(element)"
+            mat-icon-button
+            aria-label="Button to open Response Template detail"
+          >
+            <mat-icon svgIcon="gio:eye-empty"></mat-icon>
+          </button>
+          <button
+            *ngIf="!isReadOnly"
+            (click)="onEditResponseTemplateClicked(element)"
+            mat-icon-button
+            aria-label="Button to edit a Response Template"
+          >
+            <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
+          </button>
+          <button
+            *gioPermission="{ anyOf: ['api-response_templates-d'] }"
+            (click)="onDeleteResponseTemplateClicked(element)"
+            mat-icon-button
+            aria-label="Button to delete a Response Template"
+          >
+            <mat-icon svgIcon="gio:trash"></mat-icon>
+          </button>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="responseTemplateTableDisplayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: responseTemplateTableDisplayedColumns"></tr>
+
+    <!-- Row shown when there is no data -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" [attr.colspan]="responseTemplateTableDisplayedColumns.length">No Response Templates</td>
+    </tr>
+  </table>
+</mat-card>
