--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.scss
@@ -1,5 +1,29 @@
+@use 'sass:map';
+@use 'node_modules/@angular/material' as mat;
+@use '@gravitee/ui-particles-angular' as gio;
+
 @use '../../../../../scss/gio-layout' as gio-layout;
 
 :host {
   @include gio-layout.gio-responsive-content-container;
+}
+
+$typography: map.get(gio.$mat-theme, typography);
+
+.card {
+  &__template-key,
+  &__accept-header {
+    &__label {
+      @include mat.typography-level($typography, body-2);
+    }
+
+    &__label,
+    &__hint {
+      padding: 0 0.75em 0 0.75em;
+    }
+
+    &__form-field {
+      width: 100%;
+    }
+  }
 }
